nav > ul > li > ul:hover { display: block; }

--- a/theme.css
+++ b/theme.css
@@ -112,6 +112,10 @@ header
 		{
 			display: block;
 		}
+		nav > ul > li > ul:hover
+		{
+			display: block;
+		}
 		nav > ul > li > ul
 		{
 			display: none;
